--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "express": "^4.15.4",
     "mysql": "^2.14.1",
     "orm": "^3.2.4",
+    "md5": "^2.2.1",
+    "nodemailer": "^4.0.1",
     "sqlite3": "^3.1.9"
   },
   "devDependencies": {},
